# python-project-52

./: .env  .gitignore  Makefile  README.md  coverage.lcov  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: check_lint.yml
task_manager/: admin.py  apps.py  mixins.py  models.py  settings.py  test.py  urls.py  views.py
task_manager/fixtures/: Task_manager_fixture.json  user_fixture.json
task_manager/labels/: admin.py  apps.py  forms.py  models.py  test.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/migrations/: 0001_initial.py  0002_label_task_status_delete_statuses.py  0002_rename_descriptions_task_description_and_more.py  0003_alter_task_executor.py  0004_customuser_remove_task_label_task_labels_and_more.py  0004_person_alter_task_label_alter_task_author_and_more.py  0005_delete_person_person.py
task_manager/statuses/: admin.py  apps.py  forms.py  models.py  test.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  apps.py  filters.py  forms.py  models.py  test.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: 404.html  500.html  base.html  cover.html  delete_user.html  flashmsg.html  index.html  signup.html  update.html
task_manager/templates/labels/: create.html  create_labels.html  delete_label.html  labels_list.html  list.html  update.html  update_label.html
task_manager/templates/statuses/: create.html  create_status.html  (+6 more)
task_manager/users/: admin.py  apps.py  forms.py  test.py  urls.py  views.py
(+19 files in other folders)
