[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["FrissonFrisson <compton56rus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
whitenoise = "^6.6.0"
django-filter = "^24.3"
coverage = "^7.6.1"
rollbar = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
